// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:radios 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  radios
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RadiosControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                <span
                  class="text-muted"
                >
                  -
                </span>
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:radios 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  radios
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RadiosControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
          >
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default checked __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default--checked"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option A
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option B
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option C
              </span>
            </label>
            <label
              class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
              data-role="checkbox"
            >
              <input
                type="radio"
              />
              <i>
                <div
                  class="radio-icon icon"
                />
              </i>
              <span
                class=""
              >
                Option D
              </span>
            </label>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                a
              </span>
            </div>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Renderer:radios source & autoFill 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default __AMIS_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            The form
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__AMIS_COMPONENT_CLASS_PREFIX__Form __AMIS_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  radios
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__RadiosControl __AMIS_COMPONENT_CLASS_PREFIX__Form-control is-thin"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Grid"
            >
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Grid-col--sm4"
              >
                <label
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
                  data-role="checkbox"
                >
                  <input
                    checked=""
                    type="radio"
                  />
                  <i>
                    <div
                      class="radio-icon icon"
                    />
                  </i>
                  <span
                    class="class-a"
                  >
                    A
                  </span>
                </label>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Grid-col--sm4"
              >
                <label
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
                  data-role="checkbox"
                >
                  <input
                    type="radio"
                  />
                  <i>
                    <div
                      class="radio-icon icon"
                    />
                  </i>
                  <span
                    class="class-a"
                  >
                    B
                  </span>
                </label>
              </div>
              <div
                class="__AMIS_COMPONENT_CLASS_PREFIX__Grid-col--sm4"
              >
                <label
                  class="__AMIS_COMPONENT_CLASS_PREFIX__Checkbox __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default checked __AMIS_COMPONENT_CLASS_PREFIX__Checkbox--radio--default--checked"
                  data-role="checkbox"
                >
                  <input
                    type="radio"
                  />
                  <i>
                    <div
                      class="radio-icon icon"
                    />
                  </i>
                  <span
                    class="class-a"
                  >
                    C
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="radios"
          data-role="form-item"
        >
          <label
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  当前值
                </span>
              </span>
            </span>
          </label>
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Form-control"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
              >
                aa
              </span>
            </div>
          </div>
        </div>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view autoFillClass"
        >
          <span>
            13
          </span>
        </span>
      </form>
    </div>
  </div>
</div>
`;
